--- a/src/style.css
+++ b/src/style.css
@@ -41,7 +41,7 @@
   --primary-soft-orange: hsl(43, 84%, 65%);
 
   --neutral-very-dark-blue: hsl(226, 43%, 10%);
-  --neutral-dark-blue: hsl(235, 46%, 20%);
+  --neutral-dark-blue: hsl(235, 45%, 20%);
   --neutral-desaturated-blue: hsl(235, 45%, 61%);
   --neutral-pale-blue: hsl(236, 100%, 87%);
 }
@@ -67,38 +67,89 @@ body {
   min-height: 100vh;
 }
 
-/* Utility Classes */
+/* User Utility Classes */
 
-.container {
-  border: 1px solid red;
-  border-radius: 1.5rem;
+.user-container {
+  height: 20.3rem;
 }
 
 .user-background {
   background: var(--primary-blue);
+  height: 65.517%;
+  border-radius: 1.5rem;
+}
+
+.user-main {
+  background: var(--neutral-dark-blue);
+  border-radius: 1.5rem;
+  height: inherit;
+}
+
+/* Utility Classes */
+
+.container {
+  border-radius: 1.5rem;
+  height: 16rem;
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.container-main {
+  background: var(--neutral-dark-blue);
+  border-radius: 1.5rem;
+  height: 81.557%;
 }
 
 .work-background {
   background: var(--primary-light-red-work);
+  border-radius: 1.5rem;
 }
 
 .play-background {
   background: var(--primary-soft-blue);
+  border-radius: 1.5rem;
 }
 
 .study-background {
   background: var(--primary-light-red-study);
+  border-radius: 1.5rem;
 }
 
 .exercise-background {
   background: var(--primary-lime-green);
+  border-radius: 1.5rem;
 }
 
 .social-background {
   background: var(--primary-violet);
+  border-radius: 1.5rem;
 }
 
 .self-care-background {
   background: var(--primary-soft-orange);
+  border-radius: 1.5rem;
 }
+
 /* Custom Styling */
+main {
+  width: min(87.2%, 111rem);
+  display: grid;
+  gap: 2.4rem;
+  margin: 8.1rem auto;
+}
+
+@media screen and (min-width: 768px) {
+  main {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+
+  .container {
+    height: -webkit-fill-available;
+  }
+
+  .user-container {
+    grid-row: 1 / 3;
+    height: 51.8rem;
+  }
+}
