--- a/src/style.css
+++ b/src/style.css
@@ -22,11 +22,11 @@
 }
 
 .text-md {
-  font-size: clamp(2.4rem, 6.4vw, 4rem);
+  font-size: clamp(2.4rem, 2.778vw, 4rem);
 }
 
 .text-lg {
-  font-size: clamp(3.2rem, 8.533vw, 5.6rem);
+  font-size: clamp(3.2rem, 3.889vw, 5.6rem);
 }
 
 /* Color variables */
@@ -73,6 +73,7 @@ body {
 .user-main {
   background: var(--neutral-dark-blue);
   border-radius: 1.5rem;
+  height: inherit;
 }
 .user-background {
   background: var(--primary-blue);
